Typefoutje preliminary conclusions

--- a/sewer_tracing/index.html
+++ b/sewer_tracing/index.html
@@ -219,7 +219,7 @@
 </div>
 
 <div id="conclustion" class="center_text">
-    <h2 class="center_title"> Preliminary results </h2>
+    <h2 class="center_title">Preliminary conclusions</h2>
 
     <p>As of yet, we are unable to make a reliable estimate of the true number of infected people in the Netherlands. First and foremost, this is due to the unstable nature of the correlation between the RNA flow and the total number of recorded infections. However, the moderate, positive correlation between these two variables indicates that the RNA flow becomes an increasingly better predictor as we get further along in the pandemic. If we do essay to construct a prediction model, we recommend to use only the most recent RNA flow data to build it, as they are likely the most reliable. </p>
 
